--- a/src/app/widgets/widgets.component.html
+++ b/src/app/widgets/widgets.component.html
@@ -1,7 +1,11 @@
 <div class="mdl-grid items">
   <div class="mdl-cell mdl-cell--6-col">
-    <div *ngFor="let widget of widgets" (click)="selectWidget(widget)"
-         class="item-card mdl-card mdl-shadow--2dp">
+    <div 
+    *ngFor="let widget of widgets" 
+    class="item-card mdl-card mdl-shadow--2dp"
+    (click) = "selectWidget(widget)"
+    #okidoki
+    >
       <div>
         <div class="mdl-card__title">
           <h2 class="mdl-card__title-text">{{widget.name}}</h2>
@@ -11,23 +15,31 @@
         </div>
       </div>
       <div class="mdl-card__menu">
-        <button (click)="deleteWidget(widget); $event.stopPropagation();"
-                class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+        <button
+          class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
           <i class="material-icons">close</i>
         </button>
       </div>
     </div>
   </div>
   <div class="mdl-cell mdl-cell--6-col">
-    <div class="item-card mdl-card mdl-shadow--2dp">
+    <div 
+    class="item-card mdl-card mdl-shadow--2dp">
       <div class="mdl-card__title">
-        <h2 class="mdl-card__title-text" *ngIf="selectedWidget?.id">{{selectedWidget?.name}}</h2>
-        <h2 class="mdl-card__title-text" *ngIf="!selectedWidget?.id">Select a Widget</h2>
+        <h2 *ngIf="!selectedWidget" class="mdl-card__title-text">Select a Widget</h2>
+        <h2 *ngIf="selectedWidget" class="mdl-card__title-text">{{selectedWidget.name}}</h2>
       </div>
-      <div class="mdl-card__supporting-text">
-        <h6>{{selectedWidget?.description}}</h6>
+      <div 
+      
+      class="mdl-card__supporting-text">
+        {{selectedWidget.description}}
+      </div>
+      <div class="mdl-card__actions">
+        <button type="submit"
+          class="mdl-button mdl-js-button mdl-js-ripple-effect">Cancel</button>
+        <button type="submit"
+          class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect">Save</button>
       </div>
     </div>
-
   </div>
 </div>
